--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
 
     repositories {
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+//        classpath 'com.android.tools.build:gradle:2.2.0'
     }
 
 }
@@ -13,6 +13,6 @@ buildscript {
 allprojects {
 
     repositories {
-        mavenCentral()
+        jcenter()
     }
 }
